# infoedge-kimaya

./: .gitignore  Dockerfile  README.md  app.py  image_demo.py  pyproject.toml  requirements.txt  streamlit_app.py  test_app.py
agents/: state.py  summarize_chain.py
data/: attachments.csv  power_weeder.csv
data/stihl/: STIHL_FS120_Videos.csv  product_accessories.csv  stihl_new_products.csv
entities/: grade_hallu.py  node_entities.py
graphs/: ama_nodes.py  rag_graph.py
notebooks/: multimodal_input.ipynb  scrape_stihl.ipynb
prompts/: rag_prompt.py
stihl_doc_store/: docs_backup.json  product_accessories.json
tools/: retriever_tool.py
utils/: convert_img.py  get_accessories.py  ingest_data.py
