[tool.poetry]
name = "agentic-python-app"
version = "0.1.0"
description = "An agentic python app built using langraph and FastAPI following clean architecture"
authors = ["ajinkyaT <ajinkya.takawale97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain-anthropic = "^0.1.15"
langgraph = "^0.0.64"
chromadb = "^0.5.0"
fastapi = "^0.111.0"
langchain-groq = "^0.1.5"
ipykernel = "^6.29.4"
langchain-openai = "^0.1.8"
langchain = ">=0.2,<0.3"
unstructured = {extras = ["all-docs"], version = "^0.14.8"}
pydantic = "^2.7.4"
lxml = "^5.2.2"
langchainhub = "^0.1.20"
jsonlines = "^4.0.0"
html5lib = "^1.1"
autoscraper = "^1.1.14"
langchain-community = "^0.2.6"
grandalf = "^0.8"
llama-index = "^0.10.52"
langcodes = "^3.4.0"

[tool.poetry.group.dev.dependencies]
gradio = " 4.31.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
